<resources>
    <string name="app_name">WHIP</string>

    <string name="title_text">Whip login</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>

    <string name="signed_in">Sign In</string>

    <string name="signing_in">Signing in…</string>

    <string name="signed_out_es">Signed out</string>

    <string name="signed_in_err">"Error: please check logs."</string>

    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>

    <string name="loading">Loading…</string>

    <string name="auth_code_fmt">Auth Code: %s</string>

    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>

    <string name="disconnect">Disconnect</string>

    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>

    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>

    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>

    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>

    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>

    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>

    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">165813394161-g8paonp3kugst715s14eloh84l9lvneu.apps.googleusercontent.com</string>

    <string name="logo_whip">whip logo</string>

    <string name="title_activity_info_post_adoption">InfoPostAdoption</string>

    <string name="open">open</string>

    <string name="close">close</string>

    <string name="order_by_cat">Ordered by:</string>

    <string name="a_adir">Add</string>

    <string name="notifications">Notifications</string>

    <string name="favorito">Favourite</string>

    <string name="delete">Delete</string>

    <string name="nombre_real">Real name</string>

    <string name="user">User</string>

    <string name="correo">Mail</string>

    <string name="choose">Choose</string>

    <string name="upload">Upload</string>

    <string name="tipo">TYPE:</string>

    <string name="especie">SPECIES:</string>

    <string name="raza">RACE:</string>

    <string name="cerrar_post">CLOSE POST</string>

    <string name="comentarios_0">Comments 0</string>

    <string name="a_ade_un_comentario_es">Add a comment…</string>

    <string name="p_rdida">LOST</string>

    <string name="adopci_n">ADOPTION</string>

    <string name="eventos">EVENTS</string>

    <string name="a_ade_el_t_tulo">Add the title…*</string>

    <string name="a_ade_el_c_p">Add the P.C…*</string>

    <string name="a_ade_la_raza">Add the race…*</string>

    <string name="crear">CREATE</string>

    <string name="cancelar">Cancel</string>

    <string name="perfil">MAIN MENU</string>

    <string name="mensajes">MESSAGES</string>

    <string name="mis_posts">MY POSTS</string>

    <string name="editar_perfil">EDIT PROFILE</string>

    <string name="c_p">P.C.</string>

    <string name="username">Username</string>

    <string name="apellido">First Surname</string>

    <string name="nombre">Name</string>

    <string name="guardar">SAVE</string>

    <string name="a_ade_un_comentario_hint">Add a comment…</string>

    <string name="a_ade_la_raza_adopt">Add the race…*</string>

    <string name="a_ade_el_c_p_hint">Add the P.C…*</string>

    <string name="a_ade_el_t_tulo_hint">Add the title…*</string>

    <string name="borrar">Delete</string>

    <string name="linea_separadora">-------------------------------------------------------------------</string>

    <string name="todo">TODO</string>

    <string name="ver_respuestas">See answers</string>

    <string name="facebook_app_id">2316633415254454</string>

    <string name="fb_login_protocol_scheme">fb2316633415254454</string>

    <string name="logejat_facebook">Successfully logged in</string>

    <string name="login_facebook_cancelat">Login canceled</string>

    <string name="logged_out_facebook">Logged out</string>

    <string name="fotmato_fecha">DD/MM/YYYY</string>

    <string name="fecha">Date</string>¡

    <string name="introducir_lugar_para_la_quedada">Enter place for the meet</string>¡

    <string name="lugar">Place</string>

    <string name="hora">Time</string>

    <string name="formato_hora">HH:MM</string>

    <string name="enviar_quedada">Send Meet</string>

    <string name="creador_del_post">POST CREATOR:</string>

    <string name="creador">CREATOR:</string>

    <string name="motivo_de_la_adopci_n">Adoption Reason</string>

    <string name="enviar_solicitud">SEND REQUEST</string>

    <string name="expon_en_este_espacio_los_motivos_por_los_cuales_quieres_adoptar_al_animal">Expose in this space the reasons why you want to adopt the animal</string>

    <string name="usuario">User:</string>

    <string name="te_han_propuesto_una_quedada">They have proposed a meeting</string>

    <string name="lugar_event">Place:</string>

    <string name="hora_events">Time:</string>

    <string name="calendario">Calendar</string>

    <string name="acceptar">Accept</string>

    <string name="aceptar">ACCEPT</string>

    <string name="rechazar">REFUSE</string>

    <string name="fechaMayuscula">DATE:</string>

    <string name="HORA">TIME:</string>

    <string name="LUGAR">PLACE:</string>

    <string name="abandono_o_p_rdida">ABANDONMENT OR LOST</string>

    <string name="ver_perfil">SEE PROFILE</string>

    <string name="log_out">LOG OUT</string>

    <string name="recent">Recent</string>

    <string name="dog">Dog</string>

    <string name="cat">Cat</string>

    <string name="other">Other</string>

    <string name="debe_escribir">You must write a comment</string>

    <string name="solicitar_quedada">You have requested a meeting</string>

    <string name="TeHanSolicitado">Somebody have requested a meeting</string>

    <string name="delete_comment">Are you sure you want to delete this comment?</string>

    <string name="si">Yes</string>

    <string name="delete_comment_may">DELETE COMMENT</string>

    <string name="not_create_comment">YOU HAVE NOT CREATED THIS COMMENT, YOU CAN NOT DELETE IT</string>

    <string name="fields_required">All fields are required</string>

    <string name="accepted_meet">Accepted meeting</string>

    <string name="refuse_meet">Refused meeting</string>

    <string name="meeting_yourself">You can not create a meeting with yourself</string>

    <string name="close_post">Are you sure you want to close this post?</string>

    <string name="post_yourself">You have not created this post, you can not close it</string>

    <string name="delete_post">Are you sure you want to delete this post?</string>

    <string name="deletePost">DELETE POST</string>

    <string name="delete_post_creator">YOU HAVE NOT CREATED THIS POST, YOU CAN NOT DELETE IT</string>

    <string name="write_comment">You must write a comment</string>

    <string name="found">Found</string>

    <string name="lost">Lost</string>

    <string name="comments">Comments </string>

    <string name="logged_out_user">User Logged out</string>

    <string name="facebook_logged_in">User facebook Logged IN</string>

    <string name="correct_logged">User logged correctly</string>

    <string name="loggin_error">Error: Try to login again</string>

    <string name="main_menu">MAIN MENU</string>

    <string name="my_posts">Own Posts</string>

    <string name="commented_posts">Commented Posts</string>

    <string name="favourite_posts">Favourites Posts</string>

    <string name="intro_desc">Introduce a description</string>

    <string name="required_fields">The fields with * are required</string>

    <string name="meeting">MEETING</string>

    <string name="correct_meeting">Meeting created correctly</string>

    <string name="select_picture">Select Picture</string>

    <string name="subiendo">Uploading...</string>

    <string name="subida">Uploaded</string>

    <string name="failed">Failed</string>

    <string name="solicitada_por">REQUESTED BY:</string>

    <string name="replanificar">REPLAN</string>

    <string name="buscar_post">Search Post</string>

    <string name="title_activity_maps">Map</string>

    <string name="mensajeBusquedaVacio">The search field is empty</string>

    <string name="a_ade_un_mensaje">Write a message here</string>

    <string name="event_estado">State</string>

    <string name="introducir_mensaje">Introduce your message</string>

    <string name="eliminar_mensaje">DELETE MESSAGE</string>

    <string name="deletion_confirmation"> Are you sure you want to delete this message?</string>

    <string name="Si">Yes</string>
    <string name="eliminar_chat">Are you sure you want to delete this chat?</string>
    <string name="eliminar_chat_titulo"> DELETE CHAT</string>
    <string name="eliminar_comment">Are you sure you want to delete this comment?</string>
    <string name="eliminar_comment_titulo">DELETE COMMENT</string>
    <string name="cerrar_post_mensaje">Are you sure you want to delete this Post?</string>
    <string name="campost_obligatorios">All fields are required</string>
    <string name="introduce_descripcion">Introduce  a description</string>


</resources>