<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_encontrado_perdido"
        android:icon="@drawable/lupa"
        android:title="@string/abandono_o_p_rdida"/>
    <item
        android:id="@+id/nav_adopcion"
        android:icon="@drawable/perroicono"
        android:title="@string/adopci_n" />
    <item
        android:id="@+id/nav_VerPerfil"
        android:icon="@drawable/usuariogris"
        android:title="@string/ver_perfil" />
    <item
        android:id="@+id/nav_eventos"
        android:icon="@drawable/apretonmanosicon"
        android:title="@string/eventos" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/iconologout"
        android:title="@string/log_out" />




</menu>