<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.NewPostLost">


    <include
        android:id="@+id/toolbar_nova_quedada"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="35dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/fecha"
                        android:textSize="25dp" />

                    <Button
                        android:id="@+id/fecha_quedada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/fondoformlargo"
                        android:gravity="center"
                        android:hint="@string/fotmato_fecha"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="90dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/hora"
                        android:textSize="25dp" />

                    <Button
                        android:id="@+id/hora_quedada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/fondoformlargo"
                        android:gravity="center"
                        android:hint="@string/formato_hora"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="90dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/lugar"
                        android:textSize="25dp" />

                    <EditText
                        android:id="@+id/lugar_quedada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/fondoformlargo"
                        android:gravity="center"
                        android:hint="@string/introducir_lugar_para_la_quedada"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/boton_enviar_quedada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/botonredondo"
                    android:text="@string/enviar_quedada"
                    android:textColor="@color/blanco"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>