<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Views.UploadImageFirebase"
    android:background="@color/colorRosaWHIP">

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose"
            android:layout_marginEnd="5dp"
            android:background="@drawable/fondoform"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/fondoform"
            android:text="@string/upload"
            android:layout_marginStart="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="395dp"
        android:layout_height="567dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:contentDescription="@string/todo"
        android:paddingTop="40dp" />

</RelativeLayout>
