<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAdopcio"
    android:orientation="vertical"
    tools:context=".NewPostAdoption">


    <include
        android:id="@+id/toolbar_nuevoPostAdopcio"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/perfil_perroAdopcio"
                    android:layout_width="match_parent"
                    android:layout_height="196dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/perfilperro" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp">

                    <EditText
                        android:id="@+id/titulo_postAdopcio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fondoform"
                        android:hint="@string/a_ade_el_t_tulo_hint"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:id="@+id/cp_postAdopcio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/fondoform"
                        android:hint="@string/a_ade_el_c_p_hint"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp">

                    <Spinner
                        android:id="@+id/especie_postAdopcio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/fondoform"
                        android:paddingStart="10dp"
                        android:spinnerMode="dropdown"
                        tools:ignore="RtlSymmetry" />

                    <EditText
                        android:id="@+id/razaPerroAdopcio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/fondoform"
                        android:hint="@string/a_ade_la_raza_adopt"
                        android:paddingStart="10dp"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="20dp">

                    <EditText
                        android:id="@+id/descripcion_postAdopcio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/fondofromdesc"
                        android:hint="@string/a_ade_un_comentario_hint"
                        android:paddingStart="10dp"
                        android:paddingBottom="40dp"
                        tools:ignore="RtlSymmetry" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/boton_create_adopt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/botonredondo"
                    android:text="@string/crear"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/boton_cancelNewPostAdopcio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/botonredondo"
                    android:text="@string/cancelar"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>