<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="#EA9999">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/linea_separadora" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagen_comment"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:textColor="#E4D4D4"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded,SmallSp" />

                <TextView
                    android:id="@+id/date_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:padding="5dp"
                    android:textColor="#E4D4D4"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded,SmallSp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/delete_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/papelera" />


        </LinearLayout>


        <TextView
            android:id="@+id/Contenido_comment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="25dp"
            android:textColor="#434040"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/ver_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:text="@string/ver_respuestas"
            android:textColor="#0C29E2"
            android:textSize="20sp" />

    </LinearLayout>


</android.support.v7.widget.CardView>